<resources>
    <string name="app_name">SaveUp</string>
    <string name="labelBalance">Balance</string>
    <string name="title_activity_add_transaction">AddTransaction</string>
    <string name="labelTransactionTitle">Título</string>
    <string name="labelTransactionQuantity">Cantidad</string>
    <string name="labelTransactionCategory">Categoría</string>
    <string name="euroSymbol">€</string>
    <string name="euroCuantity">%1$.2f €</string>
    <string name="labelTransactionDate">Selecciona la fecha</string>
    <string name="labelTransactionDescription">Descripción del gasto</string>
    <string name="txAdd">Añadir</string>
    <string name="txCancel">Cancelar</string>
    <string name="expense">Gasto</string>
    <string name="income">Ingreso</string>
    <string name="errCampoVacio">Este campo es obligatorio</string>
    <string name="errFechaInvalida">No se reconoce como una fecha</string>
    <string name="filterIncome">Ingresos</string>
    <string name="filterAll">Todo</string>
    <string name="filterExpense">Gastos</string>
    <string name="user">Usuario</string>
    <string name="email">Email</string>
    <string name="emailPrueba">prueba@gmail.com</string>
    <string name="btEditarDatos">Editar datos</string>
    <string name="exit">Salir</string>
    <string name="closeSession">Cerrar Sesión</string>
    <string name="userPrueba">prueba33</string>
    <string name="txModify">Editar</string>
    <string name="txDelete">Eliminar</string>
    <string name="txSave">Guardar</string>
    <string name="txClose">Cerrar</string>
    <string name="fab_cd">Editar o eliminar transacción</string>
    <string name="welcomeTo">Bienvenido a</string>
    <string name="login">Login</string>
    <string name="dontHaveAccount">¿No tienes cuenta? Registrate</string>
    <string name="password">Contraseña</string>
    <string name="signUp">Sign Up</string>
    <string name="alreadyHaveAccount">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="loginIn">Iniciar Sesión</string>
    <string name="signinUp">Registrarse</string>
    <string name="passwordRepeat">Repetir contraseña</string>
    <string name="infoCreatedUser">Se ha creado el usuario</string>
    <string name="errMismatchingPasswords">Las contraseñas no coinciden</string>
    <string name="errMinLengthPassword">Tiene que tener al menos %1$d carácteres</string>
    <string name="errSigningUp">Error al crear la cuenta</string>
    <string name="infoLoggedOut">Se ha cerrado la sesión</string>
    <string name="infoLoggedIn">Se ha iniciado sesión</string>
    <string name="errLoggingIn">Error al iniciar sesión</string>
    <string name="titleGrupos">Mis grupos</string>
    <string name="addgroup">addGroup</string>
    <string name="stringBudget">Presupuesto</string>
    <string name="label_group_description">Descripción del grupo</string>
    <string name="bt_create_group">Crear grupo</string>
    <string name="id_participant">Email del participante</string>
    <string name="add_participant">Añadir</string>
    <string name="actual_budget">Presupuesto actual:</string>
    <string name="initial_budget">Presupuesto inicial:</string>
    <string name="add_expense">Añadir gasto</string>
    <string name="participants">Participantes</string>
    <string name="leave_group">Abandonar grupo</string>
    <string name="delete_group">Eliminar grupo</string>
    <string name="title_activity_add_group">AddGroup</string>
    <string name="group_expenses">Gastos del grupo:</string>
    <string name="errMessage">Ha ocurrido un error</string>

    <!-- menús -->
    <string name="mnItmProfile">Perfil</string>
    <string name="mnItmStatistics">Estadísticas</string>
    <string name="labelYear">Año</string>
    <string name="mnItmBalance">Balance</string>
    <string name="mnItmGroups">Grupos</string>

    <string name="mnItmGraphs">Gráficos</string>
    <string name="mnItmLimitsGoals">Límites &amp; Metas</string>

    <!-- estadísticas -->
    <string name="totalBalance">Balance Total</string>
    <string name="incomeExpense">Ingresos / Gastos</string>
    <string name="total">TOTAL</string>
    <string name="centerText">%1$s € \n %2$s</string>
    <string name="contentDescription_shareStatistics">Shares the statistics</string>

    <!-- límites -->
    <string name="monthlyLimits">Límites Mensuales</string>
    <string name="currentLimit">Límite Actual</string>

    <!-- metas -->
    <string name="savingGoals">Metas de Ahorro</string>
    <string name="currentGoalName">Nombre</string>
    <string name="currentGoalValue">Importe</string>
    <string name="endDateGoal">Fecha Límite</string>
    <string name="ramainingBalanceLimit">Te faltan %1$s € para alcanzar la el límite</string>
    <string name="ramainingBalanceGoal">Te faltan %1$s € para alcanzar la meta</string>
    <string name="reachedBalanceGoal">Te sobran %1$s € tras haber llegado a la meta</string>
    <string name="ramainingDaysGoal">Te quedan %1$d días para alcanzar la meta</string>
    <string name="infoInitialBalance">¿Empezar con %1$s € ahorrados?  :</string>

    <string name="errBlankGoalName">El nombre de la meta no debe estar vacío</string>
    <string name="errBlankGoalDate">La fecha de la meta no debe estar vacía</string>
    <string name="errBlankGoalValue">El importe de la meta no debe estar vacío</string>

    <string name="errLowLimit">El límite mensual debe ser mayor a 1 céntimo</string>
    <string name="errLowGoal">El importe de la meta debe ser mayor a 1 céntimo</string>

    <string name="errDate">Fecha inválida</string>


    <!-- perfil -->
    <string name="save_data">Guardar datos</string>

    <!-- grupos -->
    <string name="case_group_deleted">El grupo ha sido eliminado</string>
    <string name="case_deleted_from_group">Ha sido eliminado del grupo</string>
    <string name="aceptar">Aceptar</string>
    <string name="contentDescription_addtransaction">Adds a transaction</string>

</resources>