<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddGroupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:divider="@drawable/divider8p"
        android:orientation="vertical"
        android:showDividers="middle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:hint="@string/labelTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etGroupTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageViewGroupImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_camera" />

    </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldBudget"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stringBudget"
            app:suffixText="@string/euroSymbol">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etGroupBadget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfGroupDescription"
            android:layout_width="match_parent"
            android:layout_height="185dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:hint="@string/label_group_description" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfGroupParticipant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etIdParticipant"
                    android:layout_width="223dp"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:hint="@string/id_participant" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btAddParticipant"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="301dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add_participant" />

        </LinearLayout>

        <ListView
            android:id="@+id/listParticipants"
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:layout_marginTop="8dp"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cancelAddLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btCancel"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txCancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btAdd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btAdd"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_create_group"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btCancel"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>