<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:id="@+id/recyclerLineLayoutGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@color/group">

        <ImageView
            android:id="@+id/imageViewIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/baseline_groups_24" />

        <TextView
            android:id="@+id/titleGroup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
